Updated the HomePage and StudyListingPage with new classification/collection scrolling container block. This replaces the old expand/collapse container that was too buggy to continue using. Added a new jquery plugin with javascript and images, plus stylesheet classes, for an accordion menu for the HomePage classifications. This new menu is commented out in the HomePage, because it is only a static mockup and needs to wired dynamicly.

--- a/src/DVN-web/web/resources/stylesheet.css
+++ b/src/DVN-web/web/resources/stylesheet.css
@@ -260,20 +260,165 @@ span.disabled {font-weight: bold;}
 /* ICEFACES TREE */
 .iceTreeRow a span.iceOutTxt {font-size: 90% !important;}
 .iceTreeRow .icePnlGrp {display: inline;}
-
 .dvnTreeBlock {
   width: 100%;
-  padding: .25em;
-  border: 1px solid #DCDDDF;
-  position: relative;
+  padding: 0; border: 0;
   text-align: left;
 }
-.dvnTreeControls {padding: 0 .25em; overflow: hidden;}
-#dvnTreeOpen {font-size: 90% !important; float: left; cursor: pointer;}
-#dvnTreeClose {font-size: 90% !important; float: right; cursor: pointer;}
+.dvnTreeContainer {
+    width: 100%;
+    height: 30em;
+    border-top: solid 1px #BBB;
+    border-left: solid 1px #BBB;
+    border-bottom: solid 1px #FFF;
+    border-right: solid 1px #FFF;
+    background: #FFF;
+    overflow: scroll;
+    padding: .25em;
+}
 
-.dvnTreeContainer {width: 100%; background-color: white; overflow: hidden;}
-.dvnTreeContainer div.iceTree {overflow-x: hidden; overflow-y: hidden; clear: both; width: 100%; padding-bottom: 1.75em;}
+/* JQUERY CLASSIFICATIONS ACCORDION MENU */
+.theMenuContainer {
+    overflow: scroll;
+    margin: 0;
+    padding: 0;
+}
+.theMenu {
+    margin: 0;
+    padding: 0;
+    font-size: 90% !important;
+}
+.theMenuContainer ul {
+    margin: 0;
+    list-style-type: none;
+    list-style-image: none;
+}
+.theMenuContainer li {
+    list-style-type: none;
+    list-style-image: none;
+}
+.theMenuContainer ul ul li {
+    padding: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+}
+ul.xtraMenu {
+    margin: 0;
+    padding: 0;
+}
+ul.xtraMenu li {
+    margin-left: 0;
+}
+ul.xtraMenu ul li {
+    margin-left: 0;
+}
+ul.xtraMenu ul li a:link, ul.xtraMenu ul li a:active, ul.xtraMenu ul li a:hover, ul.xtraMenu ul li a:visited {
+    font-size: 90% !important;
+}
+.theMenuContainer ul ul li a {
+    display: block;
+    text-decoration: none;
+    padding: 0px 6px;
+}
+.theMenuContainer ul ul li a:hover {
+    display: block;
+    text-decoration: underline;
+    padding: 0px 6px;
+}
+/* For the xtra menu */
+.theMenuContainer ul ul ul li {
+    padding: 0;
+    margin-bottom: 0;
+}
+.theMenuContainer ul ul ul li a {
+    display: block;
+    text-decoration: none;
+    padding: 0px 6px;
+}
+.theMenuContainer ul ul ul li a:hover {
+    display: block;
+    text-decoration: underline;
+    padding: 0px 6px;
+}
+/* Header links styling */
+.theMenuContainer h3.headFilter {
+    font-size: 90% !important;
+    padding: 0px 6px;
+    color: darkgrey;
+}
+.theMenuContainer h3.head {
+    font-size: 90% !important;
+    padding: 0px 6px;
+    color: darkgrey;
+}
+.theMenuContainer h3.head a {
+    text-decoration: none;
+    display: block;
+    background: url(menudown.gif) no-repeat;
+    background-position: 98% 50%;
+    font-size: 100% !important;
+    font-weight: normal;
+}
+.theMenuContainer h3.head a:hover {
+    text-decoration: underline;
+    background: url(menudown.gif) no-repeat;
+    background-position: 98% 50%;
+    font-size: 100% !important;
+    font-weight: normal;
+}
+.theMenuContainer h3.selected a {
+    background: url(menuup.gif) no-repeat;
+    background-position: 98% 50%;
+    text-decoration: none;
+    font-size: 100% !important;
+    font-weight: bold;
+}
+.theMenuContainer h3.selected a:hover {
+    background: url(menuup.gif) no-repeat;
+    background-position: 98% 50%;
+    text-decoration: underline;
+    font-size: 100% !important;
+    font-weight: bold;
+}
+.theMenuContainer h3.head a.nochild, .theMenuContainer h3.selected a.nochild {
+    background-image: none;
+}
+/* Xtra Header links styling */
+.theMenuContainer h4.head, .theMenuContainer h4.selected {
+    margin: 0;
+    padding: 0;
+}
+.theMenuContainer h4.head a {
+    text-decoration: none;
+    display: block;
+    background: url(menudown.gif) no-repeat;
+    background-position: 98% 50%;
+    padding: 0px 6px;
+    font-size: 90% !important;
+    font-weight: normal;
+}
+.theMenuContainer h4.head a:hover {
+    text-decoration: underline;
+    background: url(menudown.gif) no-repeat;
+    background-position: 98% 50%;
+    font-size: 90% !important;
+    font-weight: normal;
+}
+.theMenuContainer h4.selected a {
+    background: url(menuup.gif) no-repeat;
+    background-position: 98% 50%;
+    text-decoration: none;
+    padding: 0px 6px;
+    font-size: 90% !important;
+    font-weight: bold;
+}
+.theMenuContainer h4.selected a:hover {
+    background: url(menuup.gif) no-repeat;
+    background-position: 98% 50%;
+    text-decoration: underline;
+    font-size: 90% !important;
+    font-weight: bold;
+}
 
 /* HEADER */
 .dvn_headerTitle {position: relative; text-align: left;}
